// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`台灣麻將花牌規則 baseline > 保留 seed 1 的完整花牌 baseline 1`] = `
{
  "notes": [
    "花牌會移出手牌，並由牌牆尾端補進一張非花牌。",
    "東家起手 17 張，其餘三家各 16 張。",
  ],
  "players": [
    {
      "flowers": [],
      "label": "東家",
      "seat": "east",
      "tiles": [
        "B1",
        "B3",
        "B4",
        "B5",
        "B8",
        "C3",
        "C3",
        "C5",
        "C5",
        "C7",
        "D2",
        "D5",
        "D6",
        "D7",
        "D8",
        "WE",
        "WS",
      ],
    },
    {
      "flowers": [
        "F6",
      ],
      "label": "南家",
      "seat": "south",
      "tiles": [
        "B1",
        "B6",
        "B8",
        "C1",
        "C2",
        "C2",
        "C3",
        "D5",
        "D5",
        "D9",
        "WW",
        "WN",
        "DG",
        "DG",
        "DW",
        "DW",
      ],
    },
    {
      "flowers": [
        "F7",
        "F8",
      ],
      "label": "西家",
      "seat": "west",
      "tiles": [
        "B1",
        "B2",
        "B4",
        "B8",
        "C1",
        "C2",
        "C3",
        "C6",
        "C6",
        "C8",
        "D1",
        "D4",
        "WS",
        "WN",
        "WN",
        "DR",
      ],
    },
    {
      "flowers": [],
      "label": "北家",
      "seat": "north",
      "tiles": [
        "B8",
        "C4",
        "C5",
        "D1",
        "D4",
        "D5",
        "D7",
        "D7",
        "D8",
        "D8",
        "D9",
        "WE",
        "WS",
        "WS",
        "WW",
        "DG",
      ],
    },
  ],
  "ruleMode": "flowers",
  "seed": 1,
  "wallRemaining": 76,
}
`;

exports[`台灣麻將花牌規則 baseline > 保留 seed 42 的完整花牌 baseline 1`] = `
{
  "notes": [
    "花牌會移出手牌，並由牌牆尾端補進一張非花牌。",
    "東家起手 17 張，其餘三家各 16 張。",
  ],
  "players": [
    {
      "flowers": [
        "F4",
      ],
      "label": "東家",
      "seat": "east",
      "tiles": [
        "B1",
        "B4",
        "B4",
        "C2",
        "C2",
        "C3",
        "C3",
        "C5",
        "C6",
        "C7",
        "D3",
        "D4",
        "D7",
        "D8",
        "WE",
        "WW",
        "WN",
      ],
    },
    {
      "flowers": [
        "F6",
      ],
      "label": "南家",
      "seat": "south",
      "tiles": [
        "B3",
        "B5",
        "B5",
        "B8",
        "C6",
        "C8",
        "C8",
        "C9",
        "D7",
        "D8",
        "WS",
        "DR",
        "DR",
        "DR",
        "DG",
        "DW",
      ],
    },
    {
      "flowers": [
        "F5",
      ],
      "label": "西家",
      "seat": "west",
      "tiles": [
        "B6",
        "C1",
        "C2",
        "C3",
        "C4",
        "C4",
        "C9",
        "D4",
        "D5",
        "D5",
        "D7",
        "D9",
        "WE",
        "WW",
        "WN",
        "DG",
      ],
    },
    {
      "flowers": [],
      "label": "北家",
      "seat": "north",
      "tiles": [
        "B4",
        "B5",
        "B6",
        "B7",
        "B9",
        "C3",
        "C6",
        "C8",
        "D1",
        "D1",
        "D2",
        "D2",
        "D3",
        "D8",
        "D9",
        "DG",
      ],
    },
  ],
  "ruleMode": "flowers",
  "seed": 42,
  "wallRemaining": 76,
}
`;

exports[`台灣麻將花牌規則 baseline > 保留 seed 1234 的完整花牌 baseline 1`] = `
{
  "notes": [
    "花牌會移出手牌，並由牌牆尾端補進一張非花牌。",
    "東家起手 17 張，其餘三家各 16 張。",
  ],
  "players": [
    {
      "flowers": [
        "F2",
        "F3",
        "F6",
      ],
      "label": "東家",
      "seat": "east",
      "tiles": [
        "B2",
        "B3",
        "B8",
        "C3",
        "C4",
        "C4",
        "C7",
        "D3",
        "D3",
        "D4",
        "D6",
        "D7",
        "D8",
        "D8",
        "WS",
        "DR",
        "DG",
      ],
    },
    {
      "flowers": [
        "F1",
        "F8",
      ],
      "label": "南家",
      "seat": "south",
      "tiles": [
        "B2",
        "B2",
        "B4",
        "B7",
        "B8",
        "B9",
        "C2",
        "D5",
        "D5",
        "D6",
        "D9",
        "D9",
        "WW",
        "WN",
        "DW",
        "DW",
      ],
    },
    {
      "flowers": [],
      "label": "西家",
      "seat": "west",
      "tiles": [
        "B1",
        "B1",
        "B5",
        "B6",
        "B7",
        "B9",
        "C1",
        "C2",
        "C5",
        "D7",
        "D8",
        "WS",
        "DR",
        "DR",
        "DG",
        "DW",
      ],
    },
    {
      "flowers": [],
      "label": "北家",
      "seat": "north",
      "tiles": [
        "B2",
        "B6",
        "C6",
        "C8",
        "C8",
        "C9",
        "D1",
        "D2",
        "D2",
        "D4",
        "D4",
        "D4",
        "D5",
        "D7",
        "D7",
        "WS",
      ],
    },
  ],
  "ruleMode": "flowers",
  "seed": 1234,
  "wallRemaining": 74,
}
`;

exports[`台灣麻將花牌規則 baseline > 保留 seed 20260915 的完整花牌 baseline 1`] = `
{
  "notes": [
    "花牌會移出手牌，並由牌牆尾端補進一張非花牌。",
    "東家起手 17 張，其餘三家各 16 張。",
  ],
  "players": [
    {
      "flowers": [],
      "label": "東家",
      "seat": "east",
      "tiles": [
        "B1",
        "B3",
        "B5",
        "B5",
        "B6",
        "C2",
        "C5",
        "C5",
        "C7",
        "C8",
        "D5",
        "D9",
        "D9",
        "WE",
        "WN",
        "WN",
        "DG",
      ],
    },
    {
      "flowers": [
        "F2",
      ],
      "label": "南家",
      "seat": "south",
      "tiles": [
        "B1",
        "B7",
        "C1",
        "C2",
        "C6",
        "C8",
        "C8",
        "D2",
        "D3",
        "D6",
        "D8",
        "D8",
        "D9",
        "WS",
        "WW",
        "DR",
      ],
    },
    {
      "flowers": [],
      "label": "西家",
      "seat": "west",
      "tiles": [
        "B2",
        "B5",
        "B9",
        "C2",
        "C7",
        "C9",
        "D3",
        "D5",
        "D6",
        "WE",
        "WW",
        "WW",
        "DR",
        "DR",
        "DG",
        "DW",
      ],
    },
    {
      "flowers": [
        "F4",
        "F6",
      ],
      "label": "北家",
      "seat": "north",
      "tiles": [
        "B2",
        "B4",
        "B7",
        "C1",
        "C3",
        "C4",
        "C6",
        "C6",
        "C7",
        "C7",
        "C9",
        "D2",
        "D6",
        "D6",
        "D7",
        "WN",
      ],
    },
  ],
  "ruleMode": "flowers",
  "seed": 20260915,
  "wallRemaining": 76,
}
`;
